--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<meta property="og:title" content="I coded a game with Zuitt!" />
     <meta property="og:description" content="This Game Development project is powered by Zuitt Coding Bootcamp" />
-    <meta property="og:site_name" content="I coded a game with Zuitt!" />
+    <meta property="og:site_name" content="I coded a game with Zuitt! Check it out!" />
     <meta property="og:image" content="https://zdatayume.github.io/jael-js-2048-fcb/images/story-thumbnail-2048.jpg" />
     <meta property="og:image:secure_url" content="https://zdatayume.github.io/jael-js-2048-fcb/" />
 </head>
