--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta property="og:site_name" content="I coded a game with Zuitt! Check it out!" />
     <meta property="og:image" content="https://zdatayume.github.io/jael-js-2048-fcb/images/story-thumbnail-2048.jpg" />
     <meta property="og:image:secure_url" content="https://zdatayume.github.io/jael-js-2048-fcb/" />
+    <meta name="author" content="Zehll Fierran Day D. Jael">
+	
 </head>
 <body>
 	<!-- To create html contents, we usually use paired tags or
@@ -20,7 +22,7 @@
 
 		<!-- HTML offers six levels of headings, from '<h1>' (the biggest heading) to '<h6>' the smallest heading. -->
 	<h1>2048</h1> <!-- Paired Tags -->
-	<h2>Created by Zehll</h2>
+	<h2>Created by Zehll Fierran Day D. Jael</h2>
 	
 	<hr id="top-line">
 	<div class="header-container">
